Fixed SonarLint issues in chart classes for improved code quality